--- a/app/src/main/res/layout/action_bar_about.xml
+++ b/app/src/main/res/layout/action_bar_about.xml
@@ -1,3 +1,4 @@
+<!-- res/layout/toolbar_custom_title.xml -->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/action_bar_title"
     android:layout_width="match_parent"
@@ -6,4 +7,4 @@
     android:text="About"
     android:fontFamily="@font/inter_semibold"
     android:textSize="23sp"
-    android:textColor="@color/white" />
+    android:textColor="#FFFFFF" />
