--- a/app/src/main/res/layout/gym.xml
+++ b/app/src/main/res/layout/gym.xml
@@ -7,28 +7,29 @@
     android:background="#142C59"
     tools:context=".Gym">
 
+    <!-- RecyclerView for listing gym items -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_gym"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scrollbars="vertical"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_gym"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_gym"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- FrameLayout for MapFragment (Optional visibility) -->
     <FrameLayout
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/recyclerView_gym"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_gym"/>
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_gym"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-
-
-
-
+    <!-- Bottom Navigation View -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_gym"
         android:layout_width="0dp"
