--- a/app/src/main/res/layout/sign_up2.xml
+++ b/app/src/main/res/layout/sign_up2.xml
@@ -60,8 +60,8 @@
         android:id="@+id/buttonNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/goalRadioGroup"
-        android:layout_marginTop="280dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/next_button"
         android:gravity="center"
         android:text="Next"
