--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,17 @@
     <color name="selected_color">#A2D9FF</color>
     <color name="pressed_color">#A2D9FF</color>
     <color name="default_color">#FFFFFF</color>
+    <color name="colorPrimary">#142C59</color>
+    <color name="colorAccent">#A2D9FF</color>
+    <color name="textColorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#263238</color>
+    <color name="startGradientColor1">#6A1B9A</color> <!-- A deep purple -->
+    <color name="endGradientColor1">#AB47BC</color> <!-- A lighter purple -->
+    <color name="cardBackground">#FFFFFF</color> <!-- Example: White background for cards -->
+    <color name="textColorSecondary">#757575</color>
+    <color name="chartBackground">#ECEFF1</color>
+
+
 
 
 
