--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,13 +14,20 @@
         <item name="windowNoTitle">true</item>
     </style>
     <style name="CustomSearchView" parent="Widget.AppCompat.SearchView">
-        <!-- Customize background -->
-        <item name="queryBackground">@drawable/search_view_background</item>
-        <!-- Customize text color -->
-        <item name="android:textColor">@color/textColor</item>
-        <!-- Customize hint text color -->
-        <item name="android:textColorHint">@color/hintColor</item>
-        <!-- Other customizations -->
+        <!-- Text color and hint color in the search view -->
+        <item name="android:textColor">@color/textColorPrimary</item>
+        <item name="android:textColorHint">@color/colorAccent</item>
+
+        <!-- Icon color -->
+        <item name="searchIcon">@drawable/ic_search_custom</item> <!-- Custom search icon -->
+        <item name="closeIcon">@drawable/ic_close_custom</item> <!-- Custom close icon -->
     </style>
+
+
+    <!-- This style is optional, for further customization -->
+    <style name="MySearchViewStyle" parent="Widget.AppCompat.Light.SearchView">
+        <item name="queryBackground">@drawable/search_view_query_background</item>
+    </style>
+
 
 </resources>
