--- a/app/src/main/res/layout/sign_up3.xml
+++ b/app/src/main/res/layout/sign_up3.xml
@@ -28,7 +28,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:textColor="@color/textColorPrimary"
+
+        android:textColor="@color/white"
     android:textColorHint="@color/textColorSecondary">
 
     </com.google.android.material.textfield.TextInputEditText>
@@ -53,7 +54,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:inputType="textPassword"
-    android:textColor="@color/textColorPrimary"
+    android:textColor="@color/white"
     android:textColorHint="@color/textColorSecondary">
 
 </com.google.android.material.textfield.TextInputEditText>
@@ -87,7 +88,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:inputType="textPassword"
-    android:textColor="@color/textColorPrimary"
+    android:textColor="@color/white"
     android:textColorHint="@color/textColorSecondary" />
 </com.google.android.material.textfield.TextInputLayout>
 
